crates/kyac/snapshots/kyanite__ast__tests__access.snap
---
source: kyanite-core/src/ast/mod.rs
expression: ast
---
Ast {
    nodes: [
        Function(
            FuncDecl {
                name: Token {
                    kind: Identifier,
                    lexeme: Some(
                        "main",
                    ),
                    span: Span {
                        line: 1,
                        column: 5,
                        length: 4,
                    },
                },
                params: [],
                ty: None,
                body: [
                    Expr(
                        Call(
                            Call {
                                left: Ident(
                                    Ident {
                                        name: Token {
                                            kind: Identifier,
                                            lexeme: Some(
                                                "println",
                                            ),
                                            span: Span {
                                                line: 2,
                                                column: 5,
                                                length: 7,
                                            },
                                        },
                                    },
                                ),
                                args: [
                                    Access(
                                        Access {
                                            chain: [
                                                Ident(
                                                    Ident {
                                                        name: Token {
                                                            kind: Identifier,
                                                            lexeme: Some(
                                                                "kyanite",
                                                            ),
                                                            span: Span {
                                                                line: 2,
                                                                column: 13,
                                                                length: 7,
                                                            },
                                                        },
                                                    },
                                                ),
                                                Ident(
                                                    Ident {
                                                        name: Token {
                                                            kind: Identifier,
                                                            lexeme: Some(
                                                                "fs",
                                                            ),
                                                            span: Span {
                                                                line: 2,
                                                                column: 21,
                                                                length: 2,
                                                            },
                                                        },
                                                    },
                                                ),
                                                Call(
                                                    Call {
                                                        left: Ident(
                                                            Ident {
                                                                name: Token {
                                                                    kind: Identifier,
                                                                    lexeme: Some(
                                                                        "read",
                                                                    ),
                                                                    span: Span {
                                                                        line: 2,
                                                                        column: 24,
                                                                        length: 4,
                                                                    },
                                                                },
                                                            },
                                                        ),
                                                        args: [
                                                            Str(
                                                                "\"examples/access.kya\"",
                                                                Token {
                                                                    kind: Literal,
                                                                    lexeme: Some(
                                                                        "\"examples/access.kya\"",
                                                                    ),
                                                                    span: Span {
                                                                        line: 2,
                                                                        column: 29,
                                                                        length: 21,
                                                                    },
                                                                },
                                                            ),
                                                            Access(
                                                                Access {
                                                                    chain: [
                                                                        Ident(
                                                                            Ident {
                                                                                name: Token {
                                                                                    kind: Identifier,
                                                                                    lexeme: Some(
                                                                                        "kyanite",
                                                                                    ),
                                                                                    span: Span {
                                                                                        line: 2,
                                                                                        column: 52,
                                                                                        length: 7,
                                                                                    },
                                                                                },
                                                                            },
                                                                        ),
                                                                        Ident(
                                                                            Ident {
                                                                                name: Token {
                                                                                    kind: Identifier,
                                                                                    lexeme: Some(
                                                                                        "fs",
                                                                                    ),
                                                                                    span: Span {
                                                                                        line: 2,
                                                                                        column: 60,
                                                                                        length: 2,
                                                                                    },
                                                                                },
                                                                            },
                                                                        ),
                                                                        Ident(
                                                                            Ident {
                                                                                name: Token {
                                                                                    kind: Identifier,
                                                                                    lexeme: Some(
                                                                                        "O_READ",
                                                                                    ),
                                                                                    span: Span {
                                                                                        line: 2,
                                                                                        column: 63,
                                                                                        length: 6,
                                                                                    },
                                                                                },
                                                                            },
                                                                        ),
                                                                    ],
                                                                    id: 0,
                                                                },
                                                            ),
                                                        ],
                                                        parens: (
                                                            Token {
                                                                kind: LeftParen,
                                                                lexeme: None,
                                                                span: Span {
                                                                    line: 2,
                                                                    column: 28,
                                                                    length: 1,
                                                                },
                                                            },
                                                            Token {
                                                                kind: RightParen,
                                                                lexeme: None,
                                                                span: Span {
                                                                    line: 2,
                                                                    column: 69,
                                                                    length: 1,
                                                                },
                                                            },
                                                        ),
                                                        delimiters: [
                                                            Token {
                                                                kind: Comma,
                                                                lexeme: None,
                                                                span: Span {
                                                                    line: 2,
                                                                    column: 50,
                                                                    length: 1,
                                                                },
                                                            },
                                                        ],
                                                    },
                                                ),
                                            ],
                                            id: 0,
                                        },
                                    ),
                                ],
                                parens: (
                                    Token {
                                        kind: LeftParen,
                                        lexeme: None,
                                        span: Span {
                                            line: 2,
                                            column: 12,
                                            length: 1,
                                        },
                                    },
                                    Token {
                                        kind: RightParen,
                                        lexeme: None,
                                        span: Span {
                                            line: 2,
                                            column: 70,
                                            length: 1,
                                        },
                                    },
                                ),
                                delimiters: [],
                            },
                        ),
                    ),
                ],
                external: false,
                id: 0,
            },
        ),
    ],
}
